javascript에 대한 실습
js에 대해 예시를 만들어보고 내가 만든 html에 적용하여 실습해보았다.
html에게 지금부터 js가 시작된다는 것을 알려주는 태그 <script></script>
경고창 속성 = onclick="alert('hi')";
웹브라우저 위에서 일어나는 여러가지 사건들 중에 기념할만한, 사용자들에게 유용할만한 것들을 event처리라고 한다.

--- a/style.css
+++ b/style.css
@@ -22,6 +22,9 @@ ol{
   display:grid;
   grid-template-columns: 150px 1fr;
 }
+#grid ol li a{
+  color:blue;
+}
 #grid ol{
   padding-left:33px;
 }
@@ -33,9 +36,9 @@ ol{
   #grid {
     display:block;
   }
-  ol{
+  /* ol{
     border-right:none;
-  }
+  } */
   h1 {
     border-bottom:none;
   }
