반복문, 조건문을 이용해서 실습해보기
1. js에서는 같다는 표현은 (===)을 사용한다.
2. 리팩토링(refactoring):코딩을 하다보면 코드가 비효율적인 면들이 생기기 마련이다. 그러면 동작하는 것들을 그대로 두고 코드자체를 아주 효율적으로 만들어서 그 코드의 가독성을 높이고 유지보수를 하기 편리하게 만들고 중복된 코드를 낮추어서 다시 코드를 재가동하게 만드는 것.
3. 코드가 속해있는 태그, 그 태그를 가리키도록 약속되어 있는 특수한 키워드 즉, 사실상 자기자신을 가리킬 때는 this라는 표현을 쓴다.
4. 중복되는 것이 있으면 변수를 만들어서 중복된 것을 더욱 간결하게 만든다.

--- a/style.css
+++ b/style.css
@@ -36,9 +36,9 @@ ol{
   #grid {
     display:block;
   }
-  /* ol{
+  ol{
     border-right:none;
-  } */
+  }
   h1 {
     border-bottom:none;
   }
