함수 예시를 만들어서 공부해보기
1. 함수로 전달하는 값을 인자(argument)
2. 인자 값을 받아서 함수 안으로 매개해주는 변수들을 매개변수(parameter)
3. 배열 생성하고 꺼낼때 - document.write(cor[0]);
4. 배열 크기가 몇인지 볼때 - document.write(cor.lenght);
5. 배열 추가 및 삭제 - document.push(); document.pop();

--- a/style.css
+++ b/style.css
@@ -12,6 +12,9 @@ h1 {
   margin:0;
   padding:20px;
 }
+h1 a {
+  color:powderblue;
+}
 ol{
   border-right:1px solid gray;
   width:100px;
@@ -23,7 +26,7 @@ ol{
   grid-template-columns: 150px 1fr;
 }
 #grid ol li a{
-  color:blue;
+  color:powderblue;
 }
 #grid ol{
   padding-left:33px;
